force-app/main/default/objects/DC_Main_Utility__c/DC_Main_Utility__c.object-meta.xml
<CustomObject>
    <label>Main Utility</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Main Utilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>