force-app/main/default/objects/DC_Main_Utility__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Building connected to this Main Utility.</description>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Main Utilities</relationshipLabel>
    <relationshipName>Main_Utilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>