force-app/main/default/objects/DC_Main_Utility__c/fields/Max_Capacity_kw__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity_kw__c</fullName>
    <description>The maximum electrical capacity, in kW,  the Main Utility can handle.</description>
    <label>Max Capacity (kw)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>