force-app/main/default/objects/DC_Main_Utility__c/fields/Utility_Provider__c.field-meta.xml
<CustomField>
    <fullName>Utility_Provider__c</fullName>
    <description>The company providing power on this Main Utility line.</description>
    <label>Utility Provider</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>